[package]
name = "ggez-ecs-boids"
version = "0.1.0"
authors = ["prixt"]
edition = "2018"
desciption = "A simple boids simulation (flocking simulation) using specs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
specs = {version = "0.15.0", features = ["specs-derive", "shred-derive"]}
rayon = "1.1.0"
nalgebra = "0.18.0"
rand = "0.7.0"